# apps/api/src/app.ts
@@ -2,6 +2,7 @@ import express from 'express';
 import cors from 'cors';
 import authRoutes from './modules/auth/auth.routes';
 import organizationRoutes from './modules/organization/organization.routes';
+import userRoutes from './modules/user/user.routes';
 import { errorMiddleware } from './middlewares/errorMiddleware';
 
 const app = express();
@@ -12,6 +13,7 @@ app.use(express.urlencoded({ extended: true }));
 
 app.use('/api/v1/auth', authRoutes);
 app.use('/api/v1/organization', organizationRoutes);
+app.use('/api/v1/users', userRoutes);
 
 app.use(errorMiddleware);
 
